# devops-monkee

./: .gitignore  CONTRIBUTING.md  PROMPT-FOR-OTHER-AGENT.md  README.md  REPOSITORY-ORGANIZATION.md  SBEP-MANIFEST.md  SBEP-V2.2-MIGRATION-COMPLETE.md  clean_secret.ps1  replace_secret.sh  secrets.txt  tatus devops-monkee-announcement
active-projects/ads-monkee/: .env.internal  .env.new  .env.test  .gitignore  CHANGELOG.md  NEXT-PHASE-ANALYSIS.md  PROJECT-STATUS.md  QUICK-REFERENCE.md  QUICK-START-MIGRATION.md  README.md  SESSION-SUMMARY-2025-10-18.md  SETUP-NOW.md  WEEK-1-IMPLEMENTATION.md  alembic.ini  build_keywords_only.py  check_agg_counts.py  check_clients.py  check_dups.py  check_priority_campaigns.py  create-env.ps1  env.example  fix-db-password.ps1  google-ads-test.yaml  pyproject.toml  quick-setup.cmd  render.yaml  test_duplicates.py  test_insert_keyword.py  update-env.ps1
active-projects/ads-monkee/backend/: __init__.py  celery_app.py  config.py  database.py  main.py
active-projects/ads-monkee/backend/integrations/: ghl_client.py  google_ads_client.py
active-projects/ads-monkee/backend/models/: __init__.py  aggregates.py  analysis.py  analysis_run.py  audit_log.py  auth.py  base.py  campaign_modification.py  client.py  google_ads.py  lsa.py  user.py
active-projects/ads-monkee/backend/routers/: __init__.py  analysis.py  health.py
active-projects/ads-monkee/backend/schemas/: analysis.py
active-projects/ads-monkee/backend/services/: __init__.py  ghl_file_upload.py  google_ads_queries.py  llm_client.py  report_generator.py
active-projects/ads-monkee/backend/tasks/: __init__.py  analysis.py
active-projects/ads-monkee/database/: materialized_views.sql
active-projects/ads-monkee/database/migrations/: env.py
active-projects/ads-monkee/docs/: 48-HOUR-LAUNCH-PLAN.md  AI-ANALYSIS-ARCHITECTURE-PROMPT-SHORT.md  AI-ANALYSIS-ARCHITECTURE-PROMPT.md  AI-ANALYSIS-ARCHITECTURE.md  ARCHITECTURE-OPTIONS.md  ARCHITECTURE-REVIEW-2025-10-21.md  DATA-MIGRATION-GUIDE.md  DATA-SCHEMA-STANDARD.md  DATABASE-REQUIREMENTS.md  DEPLOYMENT-ARCHITECTURE-2025-10-21.md  FRONTEND-DASHBOARD-IMPLEMENTATION.md  GPT-ANALYSIS-INTEGRATION.md  MCP-DATABASE-PROVISIONING-LESSONS.md  PARALLEL-CAMPAIGN-IMPLEMENTATION-PLAN.md  PARALLEL-CAMPAIGN-STRATEGY.md  ads_monkee_prompt_pack_v_1_mvp.md  render-db-mcp-guide.md
active-projects/ads-monkee/frontend/: package.json  tailwind.config.js
active-projects/ads-monkee/frontend/src/: App.tsx  (+1 more)
active-projects/ads-monkee/scripts/: add_negative_keywords.py  add_optimized_keywords.py  analyze_priority_campaigns.py  analyze_priority_performance.py  backfill_historical_data.py  build_aggregates.py  check_campaign_bidding.py  check_constraints.py  check_keyword_constraint.py  create_materialized_views.py  create_parallel_campaign.py  create_priority_ad_groups.py  create_priority_parallel_campaign.py  delete_sunlight_campaign.py  generate_optimization_report.py  ghl_pull_custom_fields.py  import_csv_data.py  init_db.py  list_accessible_accounts.py  list_all_accessible_accounts.py  list_customers.py  list_working_accounts.py  migrate_all_clients_data.py  parallel_campaign.py  priority_roofing_plan.py  query_ghl_locations.py  query_priority_ghl_custom_fields.py  seed_clients.py  seed_targets.py  test_client_access.py  test_google_ads_api.py  test_google_ads_connection.py  test_manager_access.py  test_report_generation.py  test_revitalize_access.py  update_campaign_for_phone_calls.py  update_campaign_phone_targeting.py  verify_campaign_creation.py
active-projects/ads-monkee/sds/: SBEP-INDEX.yaml  SBEP-MANDATE.md
active-projects/ads_sync/: .gitignore  .sbep-rollback-20251015-150951.json  APPEND-COMMAND-IMPLEMENTED.md  APPEND-COMMAND-TEST-RESULTS.md  HOUSEKEEPING-COMPLETE.md  IMPLEMENTATION-GUIDE.md  INSTALLATION-COMPLETE.md  NO-DATA-CLIENTS-INVESTIGATION.md  PHASE-1-COMPLETE.md  PHASE-2-PROGRESS.md  PROJECT-SUMMARY.md  QUICK-REFERENCE.md  README.md  SBEP-COMPLIANCE-COMPLETE.md  SCAFFOLD-COMPLETE.md  SCHEMA-VALIDATION-IMPLEMENTED.md  ads_sync_cli.py  init_results.csv  nodata_output.txt  output.txt  pyproject.toml  run_init_all.ps1
active-projects/ads_sync/data/: .gitkeep
active-projects/ads_sync/errors/: .gitkeep
active-projects/ads_sync/imports/: .gitkeep
active-projects/ads_sync/locks/: .gitkeep
active-projects/ads_sync/schemas/: campaign_data_v1.schema.json  lsa_data_v1.schema.json  search_terms_v1.schema.json
active-projects/ads_sync/scripts/: analyze_comprehensive_data.py  analyze_data.py  check_nodata_clients.py  comprehensive_data_pull.py  discover_clients.py  init_all_clients.py  investigate_nodata.py  show_all_data.py
active-projects/ads_sync/sds/: SBEP-MANDATE.md
active-projects/ads_sync/state/: .gitkeep
active-projects/ads_sync/templates/: campaign_report.md.j2
active-projects/ads_sync_dashboard/: .gitignore  .sbep-rollback-20251015-151003.json  AUDIT-RUN-SUMMARY.md  CELERY-MIGRATION-COMPLETE.md  QUICK-START.md  README.md  SETUP-STATUS.md  TEST-RESULTS.md  check_all_status.ps1  docker-compose.yml  env.example  get_all_results.ps1  pyproject.toml  run_all_active_clients.ps1  run_all_audits.ps1  run_all_clients.py
active-projects/ads_sync_dashboard/api/: __init__.py  config.py  main.py
active-projects/ads_sync_dashboard/sds/: SBEP-INDEX.yaml  SBEP-MANDATE.md
active-projects/ads_sync_dashboard/worker/: __init__.py  cli_executor.py  tasks.py
(+273 files in other folders)
