[tool.poetry]
name = "ads-monkee"
version = "0.1.0"
description = "Unified Digital Advertising Management Platform"
authors = ["One Click Agency <team@oneclickagency.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

# Task Queue
celery = "^5.3.4"
redis = "^5.0.1"

# API Integrations
google-ads = "^28.2.0"
httpx = "^0.25.2"
anthropic = "^0.7.4"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"

# Data Processing
pandas = "^2.1.3"
numpy = "^1.26.2"
pyarrow = "^14.0.1"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2023.3"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"

# Reporting
reportlab = "^4.0.7"
matplotlib = "^3.8.2"

# Monitoring & Logging
sentry-sdk = {extras = ["fastapi"], version = "^1.39.1", optional = true}
instructor = "^1.11.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
respx = "^0.20.2"

# Code Quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pylint = "^3.0.2"

# Type Stubs
types-pyyaml = "^6.0.12"
types-python-dateutil = "^2.8.19"
types-redis = "^4.6.0"

# Development Tools
ipython = "^8.18.1"
ipdb = "^0.13.13"

[tool.poetry.extras]
monitoring = ["sentry-sdk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==============================================================================
# TOOL CONFIGURATIONS
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports = "normal"
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.ads.*",
    "celery.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

