[tool.poetry]
name = "ads-sync"
version = "0.1.0"
description = "Production-grade CLI tool for syncing and reporting on Google Ads data with incremental append and deduplication"
authors = ["OneClickSEO <ppcmanager@deanknows.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.0"
google-ads = "^28.0.0"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
jsonschema = "^4.21.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

